--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
     "mocha": "^5.2.0"
   }
 }
