--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon app.js --exec babel-node",
-    "test": "cross-env NODE_ENV=test nyc mocha --timeout 10000 --require babel-register test --exec"
+    "test": "cross-env NODE_ENV=test nyc mocha --timeout 10000 --require babel-register test --exec",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
