--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,32 +1,19 @@
-version: "2"         # required to adjust maintainability checks
-checks:
-  argument-count:
-    config:
-      threshold: 4
-  complex-logic:
-    config:
-      threshold: 4
-  file-lines:
-    config:
-      threshold: 250
-  method-complexity:
-    config:
-      threshold: 5
-  method-count:
-    config:
-      threshold: 20
-  method-lines:
-    config:
-      threshold: 25
-  nested-control-flow:
-    config:
-      threshold: 4
-  return-statements:
-    config:
-      threshold: 4
-  similar-code:
-    config:
-      threshold: # language-specific defaults. an override will affect all languages.
-  identical-code:
-    config:
-      threshold: # language-specific defaults. an override will affect all languages.
+engines:
+  golint:
+    enabled: true
+    checks:
+      GoLint/Naming/MixedCaps:
+        enabled: false
+  govet:
+    enabled: true
+  gofmt:
+    enabled: true
+  fixme:
+    enabled: true
+ratings:
+  paths:
+    - "**.go"
+exclude_paths:
+  - "**/*_test.go"
+  - "*_test.go"
+  - "vendor/"
