--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "coveralls": "^3.0.2",
     "cross-env": "^5.2.0",
     "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.1.0",
     "express": "^4.16.3",
+    "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^12.0.2"
   },
   "devDependencies": {
