--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.0",
     "express": "^4.16.3",
+    "istanbul": "^0.4.5",
     "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^12.0.2"
   },
