--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An app that converts currencies using standard exchange rates",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js --exec babel-node",
+    "start": "babel-node app.js",
+    "start-dev": "nodemon app.js --exec babel-node", 
     "test": "cross-env NODE_ENV=test nyc mocha --timeout 10000 --require babel-register test --exec",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
