--- a/.eslintrc
+++ b/.eslintrc
@@ -5,10 +5,7 @@
         "commonjs": true,
         "es6": true
     },
-    "extends": [
-        "eslint:recommended",
-        "airbnb"
-    ],
+    "extends": "eslint:recommended",
     "parserOptions": {
         "ecmaVersion": 2016,
         "sourceType": "module"
@@ -16,7 +13,7 @@
     "rules": {
         "indent": [
             "error",
-            2
+             2
         ],
         "linebreak-style": [
             "error",
@@ -24,7 +21,7 @@
         ],
         "quotes": [
             "error",
-            "double"
+            "single"
         ],
         "semi": [
             "error",
