--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,10 @@
         "commonjs": true,
         "es6": true
     },
-    "extends": "eslint:recommended",
+    "extends": [
+        "eslint:recommended",
+        "airbnb"
+    ],
     "parserOptions": {
         "ecmaVersion": 2016,
         "sourceType": "module"
@@ -21,11 +24,13 @@
         ],
         "quotes": [
             "error",
-            "single"
+            "double"
         ],
         "semi": [
             "error",
             "always"
-        ]
+        ],
+        "max-len": [1, 80, 2]
+
     }
 }
