--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,10 @@
         "commonjs": true,
         "es6": true
     },
-    "extends": "eslint:recommended",
+    "extends": [
+        "eslint:recommended",
+        "airbnb"
+    ],
     "parserOptions": {
         "ecmaVersion": 2016,
         "sourceType": "module"
@@ -21,7 +24,7 @@
         ],
         "quotes": [
             "error",
-            "single"
+            "double"
         ],
         "semi": [
             "error",
