Implementation of feedback This is a commit for -changing single quotes to double quotes -Replacing && operator with a || -adding new line spaces -adding JsDoc rules and comment.

--- a/.eslintrc
+++ b/.eslintrc
@@ -30,7 +30,26 @@
             "error",
             "always"
         ],
-        "max-len": [1, 80, 2]
+        "max-len": [1, 80, 2],
+        "prefer": { 
+            "arg": "param",
+            "argument": "param", 
+            "class": "constructor", 
+            "return": "returns", 
+            "virtual": "abstract" 
+        },
+        "preferType": {
+             "Boolean": "boolean", 
+             "Number": "number", 
+             "object": "Object", 
+             "String": "string" 
+        },
+        "requireReturn": false,
+        "requireReturnType": false,
+        "requireParamType": false,
+        "matchDescription": ".+",
+        "requireParamDescription": false,
+        "requireReturnDescription": false
 
     }
 }
