--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/fejiroofficial/stackoverflow-lite#readme",
   "dependencies": {
+    "bluebird": "^3.5.1",
     "codeclimate-test-reporter": "^0.5.0",
     "coveralls": "^3.0.2",
     "cross-env": "^5.2.0",
@@ -27,8 +28,11 @@
     "eslint-config-airbnb": "^17.1.0",
     "express": "^4.16.3",
     "istanbul": "^0.4.5",
+    "jsonwebtoken": "^8.3.0",
     "mocha-lcov-reporter": "^1.3.0",
-    "nyc": "^12.0.2"
+    "nyc": "^12.0.2",
+    "pg": "^7.4.3",
+    "pg-promise": "^8.4.6"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
