--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^12.0.2",
     "pg": "^7.4.3",
-    "pg-promise": "^8.4.6"
+    "pg-promise": "^8.4.6",
+    "swagger-ui-dist": "^3.18.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -44,6 +45,7 @@
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "swagger-ui": "^3.18.2"
   }
 }
