--- a/config/config.json
+++ b/config/config.json
@@ -17,7 +17,7 @@
     "test": {
       "user": "postgres",
       "password": "fejiro21",
-      "database": "stackdb",
+      "database": "stackdb_test",
       "host": "127.0.0.1",
       "port": 5432
     },
