--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "scripts": {
     "start": "babel-node app.js",
     "dev": "nodemon app.js --exec babel-node",
-    "test": "cross-env NODE_ENV=test nyc mocha --timeout 10000 --require babel-register test --exec --exit",
-    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "lint": "eslint ./ --fix",
+    "seed": "babel-node seeders/up",
+    "seed:undo": "babel-node seeders/down",
+    "test": "cross-env NODE_ENV=test nyc mocha --timeout 10000 --require babel-register test --exit",
+    "coverage": "nyc report --reporter=text-lcov --reporter=lcov | coveralls",
     "migrate": "babel-node db"
   },
   "repository": {
