--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
+    "cors": "^2.8.4",
     "mocha": "^5.2.0",
     "swagger-ui": "^3.18.2"
   }
