--- a/.travis.yml
+++ b/.travis.yml
@@ -25,13 +25,12 @@ services:
   - postgresql  
 
 before_script:
-  - psql -c 'drop database if exists stackdb_test;' -U postgres
   - psql -c 'create database stackdb_test;' -U postgres
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
 
 script:
-  - npm test
+  - npm run test
 
 after_script:
   - npm run coverage
