--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint ./ --fix",
     "seed": "babel-node seeders/up",
     "seed:undo": "babel-node seeders/down",
+    "db:setup": "npm run migrate && npm run seed",
+    "pretest": "SET \"NODE_ENV=test\" && npm run db:setup",
+    "postest": "SET \"NODE_ENV=test\" && npm run seed:undo",
     "test": "cross-env NODE_ENV=test nyc mocha --timeout 10000 --require babel-register test --exit",
     "coverage": "nyc report --reporter=text-lcov --reporter=lcov | coveralls",
     "migrate": "babel-node db"
